# 8sem

./: mycsr-config.cmake.in
task1/: CMakeLists.txt  csrmatr-config.cmake.in
task1/cmake/: FindSPARSKIT.cmake
task1/example/: CMakeLists.txt  example.cpp
task1/include/: CMakeLists.txt  CSRMatr.h  CSRMatr.hpp
task1/src/: CMakeLists.txt  CSRMatr.cpp
task1/src/skit-interface/: CMakeLists.txt  sparskit_wrapper.cpp  sparskit_wrapper.h
